--- a/src/views/product/product.ejs
+++ b/src/views/product/product.ejs
@@ -1,47 +1,115 @@
-<%- include('../partials/head') %> 
-    
-<link href="/css/product-styles.css" rel="stylesheet">
+<%- include('../partials/head') %>
 
-</head>
+        <link href="/css/product-styles.css" rel="stylesheet">
 
-<body>
-    
-    <%- include('../partials/header') %> 
+        </head>
 
-    <main>
-        <p class="banner">ENVIOS GRATIS A PARTIR DE $1000!</p>
-        <section class="main_product">
-                    <h5 class="titulo">Lorem Ipsum</h5>
-                    <img src="/public/images/product.png">
-                    <p class="descripcion">$3.500</p>
-                    <p class="descripcion">Impuestos incluidos</p>
-                    <button class="cart_button">Agregar al carrito</button>
-        </section>
-        <section class="relacionados">
-            <h4>También te puede interesar</h4>
-            <h5 class="titulo">Lorem Ipsum</h5>
-                    <img src="/public/images/product.png">
-                    <p class="descripcion">$3.500</p>
-                    <p class="descripcion">Impuestos incluidos</p>
-                    <button class="cart_button">Agregar al carrito</button>
-        </section>
-        <section class="relacionados">
-            <h5 class="titulo">Lorem Ipsum</h5>
-                    <img src="/public/images/product.png">
-                    <p class="descripcion">$3.500</p>
-                    <p class="descripcion">Impuestos incluidos</p>
-                    <button class="cart_button">Agregar al carrito</button>
-        </section>
-        <section class="relacionados">
-            <h5 class="titulo">Lorem Ipsum</h5>
-                    <img src="/public/images/product.png">
-                    <p class="descripcion">$3.500</p>
-                    <p class="descripcion">Impuestos incluidos</p>
-                    <button class="cart_button">Agregar al carrito</button>
-        </section>
-    </main>
-    
-    <%- include('../partials/footer') %> 
+        <body>
 
-</body>
-</html>
+                <%- include('../partials/header') %>
+
+                        <main>
+                                <p class="banner">ENVIOS GRATIS A PARTIR DE $1000!</p>
+                                <section class="main_product">
+                                        <div class="principales">
+                                                <div class="productos">
+                                                        <h5 class="titulo">Lorem Ipsum</h5>
+                                                        <a href="product/detail"><img src="/public/images/product.png"></a>
+                                                                <p class="descripcion">$3.500</p>
+                                                                <p class="descripcion">Impuestos incluidos</p>
+                                                                <a href="user/cart">    <button class="cart_button">Agregar al carrito</button></a>
+                                                        
+                                                </div>
+                                                <div class="productos">
+                                                        <h5 class="titulo">Lorem Ipsum</h5>
+                                                        <a href="product/detail"><img src="/public/images/product.png"></a>
+                                                                <p class="descripcion">$3.500</p>
+                                                                <p class="descripcion">Impuestos incluidos</p>
+                                                                <a href="user/cart">    <button class="cart_button">Agregar al carrito</button></a>
+                                                        
+                                                </div>
+                                                <div class="productos">
+                                                        <h5 class="titulo">Lorem Ipsum</h5>
+                                                        <a href="product/detail"><img src="/public/images/product.png"></a>
+                                                                <p class="descripcion">$3.500</p>
+                                                                <p class="descripcion">Impuestos incluidos</p>
+                                                                <a href="user/cart">    <button class="cart_button">Agregar al carrito</button></a>
+                                                        
+                                                </div> <div class="productos">
+                                                        <h5 class="titulo">Lorem Ipsum</h5>
+                                                        <a href="product/detail"><img src="/public/images/product.png"></a>
+                                                                <p class="descripcion">$3.500</p>
+                                                                <p class="descripcion">Impuestos incluidos</p>
+                                                                <a href="user/cart">    <button class="cart_button">Agregar al carrito</button></a>
+                                                        
+                                                </div>
+                                                
+                                               
+                                                
+                                                
+                                               
+                                        </div>
+                                </section>
+
+                                <div class="relacionados">
+                                        <h4>También te puede interesar</h4>
+                                        <div class="productos">
+                                                <h5 class="titulo">Lorem Ipsum</h5>
+                                                <a href="product/detail"><img src="/public/images/product.png"></a>
+                                                        <p class="descripcion">$3.500</p>
+                                                        <p class="descripcion">Impuestos incluidos</p>
+                                                        <a href="user/cart">    <button class="cart_button">Agregar al carrito</button></a>
+                                                
+                                        </div>
+                                        <div class="productos">
+                                                <h5 class="titulo">Lorem Ipsum</h5>
+                                                <a href="product/detail"><img src="/public/images/product.png"></a>
+                                                        <p class="descripcion">$3.500</p>
+                                                        <p class="descripcion">Impuestos incluidos</p>
+                                                        <a href="user/cart">    <button class="cart_button">Agregar al carrito</button></a>
+                                                
+                                        </div>
+                                        <div class="productos">
+                                                <h5 class="titulo">Lorem Ipsum</h5>
+                                                <a href="product/detail"><img src="/public/images/product.png"></a>
+                                                        <p class="descripcion">$3.500</p>
+                                                        <p class="descripcion">Impuestos incluidos</p>
+                                                        <a href="user/cart">    <button class="cart_button">Agregar al carrito</button></a>
+                                                
+                                        </div>
+                                        <div class="productos">
+                                                <h5 class="titulo">Lorem Ipsum</h5>
+                                                <a href="product/detail"><img src="/public/images/product.png"></a>
+                                                        <p class="descripcion">$3.500</p>
+                                                        <p class="descripcion">Impuestos incluidos</p>
+                                                        <a href="user/cart">    <button class="cart_button">Agregar al carrito</button></a>
+                                                
+                                        </div>
+                                        <div class="productos">
+                                                <h5 class="titulo">Lorem Ipsum</h5>
+                                                <a href="product/detail"><img src="/public/images/product.png"></a>
+                                                        <p class="descripcion">$3.500</p>
+                                                        <p class="descripcion">Impuestos incluidos</p>
+                                                        <a href="user/cart">    <button class="cart_button">Agregar al carrito</button></a>
+                                                
+                                        </div>
+                                        <div class="productos">
+                                                <h5 class="titulo">Lorem Ipsum</h5>
+                                                <a href="product/detail"><img src="/public/images/product.png"></a>
+                                                        <p class="descripcion">$3.500</p>
+                                                        <p class="descripcion">Impuestos incluidos</p>
+                                                        <a href="user/cart">    <button class="cart_button">Agregar al carrito</button></a>
+                                                
+                                        </div>
+                                       
+
+                                </div>
+
+
+                        </main>
+
+                        <%- include('../partials/footer') %>
+
+        </body>
+
+        </html>
