--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -6,7 +6,7 @@
     <div>
         <div class="header-menu">
             <ul class="nav">    
-                <li class="menu"><a href="#"><i class="fas fa-thin fa-bars"></i></a></li>
+               <!-- <li class="menu"><a href="#"><i class="fas fa-thin fa-bars"></i></a></li>-->
                 <li class="wish-list"><a href="#"><i class="fas fa-thin fa-heart"></i></a></li>
                 <li class="user"><a href="#"><i class="fas fa-thin fa-user"></i></a>
                     <ul>
