--- a/src/views/product/productCreate.ejs
+++ b/src/views/product/productCreate.ejs
@@ -7,7 +7,8 @@
     <body>
 
         <%- include('../partials/header') %>
-
+        <div class="contenedor1">   
+        <h2 class="titulo">Creacion de Productos</h2>
             <div class="create">
             <div class="Imagen">
                 <div class="#">
@@ -49,7 +50,7 @@
                 </div>
             </form>
         </div>  
-
+    </div>
             <%- include('../partials/footer') %>
 
     </body>
