--- a/src/views/product/productDetail.ejs
+++ b/src/views/product/productDetail.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/head') %> 
+<%- include('../partials/head') %> 
     
 <link href="/css/product-styles.css" rel="stylesheet">
 
@@ -6,20 +6,22 @@
 
 <body>
     
-    <%- include('partials/header') %> 
+    <%- include('../partials/header') %> 
 
     <main>
         <p class="banner">ENVIOS GRATIS A PARTIR DE $1000!</p>
-        <section class="main_product">
-                    <h5 class="titulo">Lorem Ipsum</h5>
+        <section class="main_product1">
+                  <div class="contenedor">  <h5 class="titulo">Lorem Ipsum</h5>
                     <img src="/public/images/product.png">
                     <p class="descripcion">$3.500</p>
                     <p class="descripcion">Impuestos incluidos</p>
                     <button class="cart_button">Agregar al carrito</button>
+                    </div>  
+            <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure sed quos porro. Quas eos repellendus deserunt rem esse veritatis placeat deleniti iure alias vel, cum illo et facere quo magni.</div>
         
     </main>
     
-    <%- include('partials/footer') %> 
+    <%- include('../partials/footer') %> 
 
 </body>
 </html>
