--- a/src/views/user/cart.ejs
+++ b/src/views/user/cart.ejs
@@ -7,7 +7,7 @@
     <body>
 
         <%- include('../partials/header') %>
-
+        <h2 class="titulo">Tu carrito de Compras</h2>
             <main class="main-cart">
                 <section>
                     <div class="product-img"><img src="/public/images/producto1.png"></div>
