--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -4,7 +4,7 @@
         </div>
     </div>
     <div>
-        <div class="header-menu">
+        <div class>
             <ul class="nav">    
                <!-- <li class="menu"><a href="#"><i class="fas fa-thin fa-bars"></i></a></li>-->
                 <li class="wish-list"><a href="#"><i class="fas fa-thin fa-heart"></i></a></li>
