--- a/public/css/cart-styles.css
+++ b/public/css/cart-styles.css
@@ -2,7 +2,8 @@
     box-sizing: border-box;
     width: 100%;
     margin: 0px ;
-    padding: 2px;
+    padding: 0.01px;
+    text-decoration: none;
     
 }
 
@@ -18,6 +19,10 @@ header {
     backdrop-filter: blur(5px);
     z-index: 100;
     color: white;
+}
+
+.cart{
+    width: 10%;
 }
 
 .borde-logo {
