--- a/public/css/product-styles.css
+++ b/public/css/product-styles.css
@@ -2,7 +2,8 @@
     box-sizing: border-box;
     width: 100%;
     margin: 0px ;
-    padding: 2px;
+    padding: 0px;
+    text-decoration: none;
     
 }
 
@@ -21,6 +22,10 @@ header {
     color: white;
 }
 
+.cart{
+    width: 10%;
+}
+
 .negro{
     display:block;
 }
@@ -30,6 +35,7 @@ header {
 }
 
 .nav li a {
+    color: black;
     text-decoration:none;
     padding:5px;
     display:block;
@@ -70,14 +76,15 @@ a {
     color: black;
 }
 
-
-
 .logos {
-    align-items: center;
     display: flex;
     padding: 20px;
+    size: 2em;
+    align-items: center;
+    text-align: center;
+    
+   
 }
-
 .banner{
     background-color: #FFCB00;
     text-align: center;
@@ -210,7 +217,7 @@ h3{
      .logo {
         height: 13vh;
         width: 18vh;
-        margin-top: 10px;
+        margin-top: 17px;
     }
    
 }
@@ -224,7 +231,7 @@ h3{
      .logo {
         height: 13vh;
         width: 18vh;
-        margin-top: 10px;
+        margin-top: 16px;
     }
 }
 @media (min-width: 768px){
