--- a/public/css/register-styles.css
+++ b/public/css/register-styles.css
@@ -2,7 +2,8 @@
     box-sizing: border-box;
     width: 100%;
     margin: 0px ;
-    padding: 2px;
+    padding: 0.01px;
+    text-decoration: none;
     
 }
 
