Arreglo rutas, ciclos sobre ejs y base productos

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -26,14 +26,17 @@
                             
                         </a>
                     </div>
-                    <div class="foto2"><img class="img" src="/public/images/Care.png">
-                       
+                    <div class="foto2">
+                        <a href="product"> <img class="img" src="/public/images/Care.png">
+                        </a>
                     </div>
-                    <div class="foto3"><img class="img" src="/public/images/Styling.png">
-                        
+                    <div class="foto3">
+                        <a href="product"> <img class="img" src="/public/images/Styling.png">
+                        </a>
                     </div>
-                    <div class="foto4"><img class="img" src="/public/images/Barber.png">
-                        
+                    <div class="foto4">
+                        <a href="product"> <img class="img" src="/public/images/Barber.png">
+                        </a>
                     </div>
                 </div>
 
