Filtro productos e imagenes pertinentes

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -22,20 +22,20 @@
                 <div class="fotos">
 
                     <div class="foto1">
-                        <a href="product"> <img src="/public/images/Color.png">
+                        <a href="product/color"> <img src="/public/images/Color.png">
                             
                         </a>
                     </div>
                     <div class="foto2">
-                        <a href="product"> <img class="img" src="/public/images/Care.png">
+                        <a href="product/care"> <img class="img" src="/public/images/Care.png">
                         </a>
                     </div>
                     <div class="foto3">
-                        <a href="product"> <img class="img" src="/public/images/Styling.png">
+                        <a href="product/styling"> <img class="img" src="/public/images/Styling.png">
                         </a>
                     </div>
                     <div class="foto4">
-                        <a href="product"> <img class="img" src="/public/images/Barber.png">
+                        <a href="product/barber"> <img class="img" src="/public/images/Barber.png">
                         </a>
                     </div>
                 </div>
