--- a/src/views/product/product.ejs
+++ b/src/views/product/product.ejs
@@ -12,9 +12,9 @@
                                 <p class="banner">ENVIOS GRATIS A PARTIR DE $1000!</p>
                                 <section class="main_product">
                                         <div class="principales">
-                                               <% color.forEach (element => { %>
+                                               <% filteredProducts.forEach (element => { %>
                                                 <div class="productos">
-                                                        <h5 class="titulo"><%= element.name %> </h5>
+                                                        <h6 class="titulo"><%= element.name %> </h6>
                                                                 <a href="/product/detail/<%= element.id %>">
                                                                 <img src="/images/products/<%= element.image %>">
                                                                 </a>
@@ -31,9 +31,9 @@
 
                                 <div class="relacionados">
                                         <h4>También te puede interesar</h4>
-                                        <% care.forEach (element => { %>
+                                        <% relatedProducts.forEach (element => { %>
                                         <div class="productos">
-                                                <h5 class="titulo"><%= element.name %></h5>
+                                                <h6 class="titulo"><%= element.name %></h6>
                                                 <a href="product/detail"><img src="/images/products/<%= element.image %>"></a>
                                                         <p class="descripcion">$<%= element.price %></p>
                                                         <p class="descripcion">Impuestos incluidos</p>
