--- a/src/views/user/register.ejs
+++ b/src/views/user/register.ejs
@@ -12,7 +12,7 @@
 
         <div class="login-box">
             <div class="formulario">
-                <form action="/" method="get">
+                <form action="/register" method="POST" enctype="multipart/form-data"><h4>Registrate</h4>
                     <div class="nombre">
 
                         <input type="text" placeholder="Nombre y apellido" name="■ Nombre y apellido:"> </input>
@@ -21,7 +21,9 @@
                     <div class="usuario">
                         <input type="text" placeholder="Nombre de usuario" name="usuario"> </input>
                     </div>
-
+                    <div class="avatar"><h4>Imagen de perfil</h4>
+                        <input type="file" name="avatar"/>
+                    </div>
                     <div class="calendario">
                         <h4> Fecha de nacimiento:</h4>
                         <input type="date" name="fecha de nacimiento"> </input>
@@ -31,11 +33,6 @@
 
                         <input type="mail" placeholder="E-mail"> </input>
                     </div>
-
-
-
-
-
                     <div class="password">
                         <input type="password" placeholder="Contraseña"> </input>
                     </div>
@@ -48,6 +45,7 @@
                         <button class="enviar1" type="submit">Registrarme</button>
                         <button class="borrar" type="reset">Borrar</button>
                     </div>
+                    </form>
    
     </main> 
     
