--- a/src/views/user/register.ejs
+++ b/src/views/user/register.ejs
@@ -12,7 +12,7 @@
 
         <div class="login-box">
             <div class="formulario">
-                <form action="/register" method="POST" enctype="multipart/form-data"><h4>Registrate</h4>
+                <form action="user/register" method="POST" enctype="multipart/form-data"><h4>Registrate</h4>
                     <div class="nombre">
 
                         <input type="text" placeholder="Nombre y apellido" name="■ Nombre y apellido:"> </input>
@@ -21,8 +21,9 @@
                     <div class="usuario">
                         <input type="text" placeholder="Nombre de usuario" name="usuario"> </input>
                     </div>
-                    <div class="avatar"><h4>Imagen de perfil</h4>
-                        <input type="file" name="avatar"/>
+                    <div class="avatar">
+                        <label for="image" class="form-label"><h4>Imagen de perfil:</h4></label>
+                        <input type="file" name="image" id="image" class="form-input">
                     </div>
                     <div class="calendario">
                         <h4> Fecha de nacimiento:</h4>
