--- a/src/views/user/login.ejs
+++ b/src/views/user/login.ejs
@@ -17,7 +17,7 @@
 
                     <div class="login">
 
-                        <form action="/" method="get">
+                        <form action="/user/login" method="POST">
 
                             <div class="usuario">
                                 <input type="text" placeholder="Nombre de usuario" name="usuario"> </input>
