--- a/src/views/product/detail.ejs
+++ b/src/views/product/detail.ejs
@@ -11,9 +11,9 @@
     <main>
         <p class="banner">ENVIOS GRATIS A PARTIR DE $1000!</p>
         <section class="main_product1">
-                  <div class="contenedor">  <h5 class="titulo"><%= element.name %> </h5>
-                    <img src="/public/images/<%= element.image %> ">
-                    <p class="descripcion">$<%= element.price %> </p>
+                  <div class="contenedor">  <h5 class="titulo"></h5>
+                    <img src="/public/images/">
+                    <p class="descripcion">$</p>
                     <p class="descripcion">Impuestos incluidos</p>
                     <button class="cart_button">Agregar al carrito</button>
                     </div>  
