--- a/public/css/home-styles.css
+++ b/public/css/home-styles.css
@@ -76,7 +76,7 @@ main {
 /****************************HEADER*************************************************/
 
 header {
-    width: 100vw;
+    
     display: flex;
     justify-content: space-between;
     position: fixed;
@@ -84,6 +84,9 @@ header {
     backdrop-filter: blur(5px);
     z-index: 100;
     color: white;
+    top: 0;
+    left: 0;
+    right:0;
 }
 
 .borde-logo {
