--- a/public/css/login-styles.css
+++ b/public/css/login-styles.css
@@ -15,7 +15,7 @@ body{
 }
 
 header {
-    width: 100vw;
+    
     display: flex;
     justify-content: space-between;
     position: fixed;
@@ -23,6 +23,9 @@ header {
     backdrop-filter: blur(5px);
     z-index: 100;
     color: white;
+    top: 0;
+    left: 0;
+    right:0;
 }
 
 
