--- a/public/css/register-styles.css
+++ b/public/css/register-styles.css
@@ -11,7 +11,7 @@ body{
     font-family: roboto;
 }
 header {
-    width: 100vw;
+    
     display: flex;
     justify-content: space-between;
     position: fixed;
@@ -19,8 +19,10 @@ header {
     backdrop-filter: blur(5px);
     z-index: 100;
     color: white;
+    top: 0;
+    left: 0;
+    right:0;
 }
-
 
 .nav li a {
     text-decoration:none;
