Actualizacion rutas y CSS

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,6 +1,9 @@
 <%- include('partials/head') %>
 
     <link href="/css/home-styles.css" rel="stylesheet">
+    <link href="/css/header.css" rel="stylesheet">
+    <link href="/css/footer.css" rel="stylesheet">
+    
 
     </head>
 
@@ -16,7 +19,7 @@
                         <source src="/public/images/abstract1.mp4">
                     </video>
                 </div>
-
+                <!-- Colocar sobre el background mas arriba -->
                 <div class="ofertas"><img src="/public/images/ofertas.png"></div>
 
                 <div class="fotos">
