--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -11,6 +11,9 @@
                 <ul>
                     <li><a href="/user/login">Login</a></li>
                     <li><a href="/user/register">Register</a></li>
+                    <li><a href="/product/create">Crear producto</a></li>
+                    <li><a href="/product/edit">Editar producto</a></li>
+                    <li><a href="/product/delete">Eliminar producto</a></li>
                 </ul>
                 </li>
                <li class="wish-list"><a href="#"><i class="fas fa-thin fa-heart"></i></a></li>
