--- a/src/views/product/edit.ejs
+++ b/src/views/product/edit.ejs
@@ -1,5 +1,6 @@
 <%- include('../partials/head') %>
     <link href="/css/cart-styles.css" rel="stylesheet">
+    <link href="/css/header.css" rel="stylesheet">
 
     <title>Hairsy</title>
     </head>
