--- a/src/views/user/cart.ejs
+++ b/src/views/user/cart.ejs
@@ -1,6 +1,8 @@
 <%- include('../partials/head') %>
 
     <link href="/css/cart-styles.css" rel="stylesheet">
+    <link href="/css/header.css" rel="stylesheet">
+    <link href="/css/footer.css" rel="stylesheet">
 
     </head>
 
