--- a/src/views/user/register.ejs
+++ b/src/views/user/register.ejs
@@ -1,6 +1,8 @@
 <%- include('../partials/head') %> 
 
     <link href="/css/register-styles.css" rel="stylesheet">
+    <link href="/css/header.css" rel="stylesheet">
+    <link href="/css/footer.css" rel="stylesheet">
 
 </head>
 
