--- a/public/css/login-styles.css
+++ b/public/css/login-styles.css
@@ -6,6 +6,10 @@
     padding-top: 0.1px;
 }
 
+.titulo{
+    color: white;
+}
+
 body{
     font-family: roboto;
     background: url(/public/images/products/fondoLogin.jpeg);
@@ -19,10 +23,10 @@ main {
 }
 
 .login-box {
-    /*background: #FFCB00;*/
-    
+   /*background: #FFCB00;*/
+   
     margin-top: 200px;
-    border: 1.5px solid black;
+    border: 3px solid #FFCB00;
     display: flex;
     align-items: center;
     width: 320px;
@@ -88,6 +92,9 @@ h2 {
     .fotos {
         flex-direction: column; 
      }
+     .blanco {
+        display: none;
+    }
 }
 
 
@@ -96,6 +103,9 @@ h2 {
     .fotos {
         flex-direction: column; 
      }
+     .blanco {
+        display: none;
+    }
 }
 @media (min-width: 768px){
     /* Laptop */
@@ -107,6 +117,9 @@ h2 {
         flex-direction: row; 
      }
     
+    .blanco {
+        display: none;
+    }
  
 
 }
