--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer>
+<footer class = "box">
     <section class="grilla-footer">
         <div>
             <p class="titulo_footer">ACERCA DE NOSOTROS</p>
