--- a/src/views/user/login.ejs
+++ b/src/views/user/login.ejs
@@ -15,7 +15,7 @@
                 <div class="login-box">
                     <img src=""> </img>
 
-                    <h2>Bienvenidxs</h2>
+                    <h2 class="titulo">Bienvenidxs</h2>
 
                     <div class="login">
 
