--- a/public/css/home-styles.css
+++ b/public/css/home-styles.css
@@ -6,6 +6,88 @@
     text-decoration: none;
     
 }
+/********************HEADER*********************/
+header {
+    
+    display: flex;
+    justify-content: space-between;
+    position: fixed;
+    background: transparent;
+    backdrop-filter: blur(5px);
+    z-index: 100;
+    color: white;
+    top: 0;
+    left: 0;
+    right:0;
+}
+
+.borde-logo {
+    padding: 0px;
+}
+
+.logo {
+    display: flex;
+    width: 15%;
+    padding: 5px;
+}
+
+ul {
+    padding: 40px;
+    display: flex;
+    list-style: none;
+    color: white;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+.nav li a {
+    color: black;
+    text-decoration:none;
+    padding:5px;
+    display:block;
+
+}
+
+.nav li ul {
+    display:none;
+    position:absolute;
+    min-width:140px;
+    padding: 0px;
+}
+
+.nav li:hover > ul {
+    display:block;
+}
+
+.cart{
+    width: 10%;
+}
+
+
+@media (max-width: 460px){
+    .logo {
+        height: 13vh;
+        width: 18vh;
+        margin-top: 17px;
+}
+}
+
+@media (min-width: 460px){
+    .logo {
+        height: 13vh;
+        width: 18vh;
+        margin-top: 16px;
+    }
+}
+
+@media (min-width: 768px){
+    .nav li a {
+        color: white; }
+}
+
 
 /********************video***********************/
 body{
@@ -65,7 +147,9 @@ main {
     align-items: center;
     margin-top:100px
 }
-
+.blanco {
+    display: none;
+}
 
 
 /***************************************************************************************/
@@ -81,29 +165,29 @@ main {
     /* Mobile */
     .fotos {
         flex-direction: column; 
-     }
-   .ofertas {
+}
+.ofertas {
         display: none;
         top: 200px;
-   }
+}
 }
 
 @media (min-width: 460px){
     /* Tablets */
     .fotos {
         flex-direction: column;
-      
+    
         
-     }
-     .ofertas {
+}
+.ofertas {
         display: none;
-   
+
     }
 }
 
 @media (min-width: 768px){
     /* Laptop */
-   
+
     #background{
         height: 100vh;
     }
@@ -113,11 +197,20 @@ main {
     .fotos {
         flex-direction: row; 
         position: absolute;
-     }
+}
     .ofertas {
         display: flex;
-   
+
     }
+    .negro {
+        display: none;
+    }
+    .blanco {
+        display: block;
+    }
+    .nav li a {
+        color: white; }
+ 
 }
 
 
