CSS header actualizado, modelo user funcionando, express-validator instalado

--- a/public/css/cart-styles.css
+++ b/public/css/cart-styles.css
@@ -16,6 +16,13 @@ body{
     position: absolute;
 }
 
+.nav li a {
+    color: black;
+    text-decoration:none;
+    padding:5px;
+    display:block;
+}
+
 .logos {
 
     align-items: center;
