--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/head') %>
 
     <link href="/css/home-styles.css" rel="stylesheet">
-    
+    <link href = "/css/header.css" rel = "stylesheet">
     <link href="/css/footer.css" rel="stylesheet">
     
 
