--- a/public/css/login-styles.css
+++ b/public/css/login-styles.css
@@ -22,9 +22,16 @@ main {
     height: 100vh;
 }
 
+.nav li a {
+    color: black;
+    text-decoration:none;
+    padding:5px;
+    display:block;
+}
+
 .login-box {
-   /*background: #FFCB00;*/
-   
+/*background: #FFCB00;*/
+
     margin-top: 200px;
     border: 3px solid #FFCB00;
     display: flex;
