--- a/public/css/register-styles.css
+++ b/public/css/register-styles.css
@@ -12,6 +12,13 @@ body{
 
 }
 
+.nav li a {
+    color: black;
+    text-decoration:none;
+    padding:5px;
+    display:block;
+}
+
 .img {
     width: 100%;
     height: 90%;
