--- a/src/views/product/delete.ejs
+++ b/src/views/product/delete.ejs
@@ -15,7 +15,7 @@
                                         <div class="principales">
                                                 <div class="productos">
                                                         <h5 class="titulo">Lorem Ipsum</h5>
-                                                        <a><img src="/public/images/product.png"></a>
+                                                        <a><img src="/public/images/products/product.png"></a>
                                                                 <p class="descripcion">$3.500</p>
                                                                 <button style="background-color:#ffcb00" ; type="button" class="btn btn-danger">Delete</button>
                                                         
@@ -24,7 +24,6 @@
                         
                                         </div>
                                 </section>
-                                       
 
                                 </div>
 
